# nix-workshop

./: .envrc  .gitignore  README.md  flake.nix
.github/workflows/: ci.yml
hello-apl/: .gitignore  Makefile  default.nix  hello.apl
hello-c/: Makefile  default.nix  hello.c
hello-cobol/: .gitignore  Makefile  default.nix  hello.cbl
hello-go/: default.nix  go.mod  hello.go
hello-gradle/: settings.gradle
hello-gradle/hello-gradle/: build.gradle
hello-gradle/hello-gradle/src/main/java/hello/gradle/: App.java
hello-gradle/hello-gradle/src/test/java/hello/gradle/: AppTest.java
hello-poetry/: pyproject.toml
hello-poetry/hello_poetry/: __init__.py
hello-rust/: Cargo.toml  default.nix
hello-rust/src/: main.rs
hello-scala/: default.nix
hello-setuptools/: default.nix  pyproject.toml  setup.py
hello-setuptools/hello_setuptools/: __init__.py
hello-shell/: default.nix
scripts/: setup-nix.sh
